made the payment method layout
